--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -15,5 +15,8 @@
     <strong><a href="/search" class="link-secondary">search page</a></strong>.
   </p>
 
- 
+   <!-- Try Again Button Mevin -->
+   <a href="/search" class="btn btn-outline-primary mt-3">Try Again</a>
+  </div>
+  
 {% endblock %}
