--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,10 +6,10 @@
     <div class="col-xl-6 col-lg-6 col-md-6">
       <h1>Welcome.</h1>
       <br />
-      <p class="lead">
-        <b>MedMagic</b> is a simple application that allows users to search for
+      <p class="lead"> 
+        <b>Rx-Secure</b> is a simple application that allows users to search for <!-- change then name from medmagic to Rx-Secure(Kruti)-->
         any clinical drug through the National Library of Medicine's RxNorm API.
-      </p>
+      </p> 
       <p class="lead">
         To start, simply navigate to the search page by either clicking the
         medication bottle image or using the navigation bar. Be sure to also
@@ -19,10 +19,10 @@
     <div class="col-xl-6 col-lg-6 col-md-6">
       <a href="/search"
         ><img
-          src="../static/images/bottle.png"
+          src="../static/images/Front_image.png"  
           alt="medication bottle"
           height="70%"
-      /></a>
+      /></a> <!--Add responsive image to home page for search (Kruti)-->
     </div>
   </div>
 </div>
