--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -120,7 +120,15 @@
     </p>
   </div>
 </div>
-
-
+<!-- Back to Home Button (Mevin) -->
+<div class="text-center mt-5">
+  <a href="/" class="btn btn-lg btn-primary px-4">
+    <i class="bi bi-house-fill me-2"></i> Back to Home
+  </a>
+</div>
 
 {% endblock %}
+
+
+
+
