--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body class="d-flex flex-column min-vh-100" style="background-color: #eeeeee">
