--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../static/style.css" />
-    <title>{% block title %}{% endblock %}</title>
+    <title></title>
   </head>
   <body class="d-flex flex-column min-vh-100" style="background-color: #eeeeee">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -19,9 +19,9 @@
         <a class="navbar-brand" href="/">
           <img
             class="img-responsive"
-            src="../static/images/medmagic.png"
+            src="../static/images/Rx-secure.png"  
             alt="cm"
-          />
+          /> <!-- change the code for image title in home page (Kruti)-->
         </a>
         <button
           class="navbar-toggler"
@@ -64,7 +64,7 @@
     <div
       class="text-center small justify-content-between p-4"
       style="background-color: #485c5f"
-    >
+      >
       <span class="col-sm-3"
         >Made with <em><3</em> by
         <a href="https://github.com/chrismannina/med-magic" target="_blank">
