--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,13 +63,13 @@
   <footer class="text-center text-lg-start text-white">
     <div
       class="text-center small justify-content-between p-4"
-      style="background-color: #485c5f"
-      >
+      style="background-color: #3d4d50" 
+      ><!-- change code for color (Kruti)-->
       <span class="col-sm-3"
         >Made with <em><3</em> by
         <a href="https://github.com/chrismannina/med-magic" target="_blank">
-          <img class="img-responsive" src="../static/images/cm.png" alt="cm" />
-        </a>
+          <img class="img-responsive" src="../static/images/Cm_responsive.png" alt="cm" />
+        </a><!-- change code for responsive image (Kruti)-->
       </span>
     </div>
   </footer>
