--- a/app/templates/image.html
+++ b/app/templates/image.html
@@ -4,6 +4,10 @@
 <div class="row p-5 m-5">
   <div class="col p-5">
     <img src="{{ url }}" class="img-fluid" alt="unsplash image" />
+    <p class="mt-3 text-muted text-center">
+      Image generated or retrieved based on your query.
+    </p>
+    
   </div>
 </div>
 
